# redactgate

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.build/: audit_workflow.js  design_workflow.js  impl_workflow.js
.github/workflows/: ci.yml
app/: __init__.py  audit.py  auth.py  config.py  db.py  deps.py  main.py  migrate.py  models.py  worker.py
app/gateway/: __init__.py  anthropic.py  azure.py  base.py  bedrock.py  do_genai.py  gemini.py  ollama.py  openai.py
app/packs/: ca.yaml  eu.yaml  generic.yaml  ircc.yaml  ua.yaml  us.yaml
app/redaction/: detect.py  llm_ner.py  merge.py  normalize.py  packs_loader.py  pg_store.py  pipeline.py  placeholders.py  policy.py  presidio_ner.py  regex_packs.py  store.py  validators.py  vault.py
app/routes/: __init__.py  admin.py  health.py  proxy.py
app/schemas/: __init__.py  entities.py  openai.py
docs/: LAUNCH.md  SECURITY.md
eval/: __init__.py  harness.py
eval/golden/: ca.jsonl  eu.jsonl  (+1 more)
migrations/: 001_init.sql  002_seed.sql  003_audit_truncate_guard.sql
scripts/: mock_upstream.py
site/: index.html
tests/: conftest.py  test_audit.py  test_auth.py  test_db_session.py  test_detect.py  test_extract_inject.py  test_gateway.py  test_generic_pack.py  test_health.py  test_merge.py  test_placeholders.py  test_policy.py  test_proxy_e2e.py  test_regex_packs.py  test_security_fixes.py  test_stream_detok.py  test_validators.py  test_vault.py
web/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
(+26 files in other folders)
